# pymacs

./: .gitignore  AGENTS.md  IMPLEMENTATION.md  README.md  pyproject.toml
src/pymacs/: __init__.py  cli.py  commands.py  core.py  keymap.py  main.py  state.py  tui.py
src/pymacs/commands/: __init__.py  editing.py  help.py
src/pymacs/ui/: __init__.py  app.py  controller.py
tests/: conftest.py  test_cli.py  test_core.py  test_keymap.py  test_main.py  test_tui.py  test_ui_controller.py
