[project]
name = "pymacs"
version = "0.1.0"
description = "PyMACS — Python Modular Adaptive Command System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pymacs = "pymacs.cli:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
